@@ -18,7 +18,7 @@ GETTEXT_PACKAGE=parcellite
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [gettext package])
 
-ALL_LINGUAS="de es hu it ja pl_PL pt_BR ru sv tr zh_CN"
+ALL_LINGUAS="de es hu it ja pl pl_PL pt_BR ru sv tr zh_CN"
 AM_GLIB_GNU_GETTEXT()
 AC_PROG_INTLTOOL([0.23])
 
