@@ -72,7 +72,9 @@ item_check(gpointer data)
 		g_free(targets);
     /* Only recover lost contents if there isn't any other type of content in the clipboard */
     if (!contents)
+    {
       gtk_clipboard_set_text(primary, primary_text, -1);
+    }
   }
   else
   {
@@ -116,7 +118,9 @@ item_check(gpointer data)
 		g_free(targets);
 		/* Only recover lost contents if there isn't any other type of content in the clipboard */
 		if (!contents)
+		{
       gtk_clipboard_set_text(clipboard, clipboard_text, -1);
+    }
   }
   else
   {
@@ -585,13 +589,13 @@ show_history_menu(gpointer data)
       gtk_label_set_single_line_mode((GtkLabel*)item_label, prefs.single_line);
       
       /* Check if item is also clipboard text and make bold */
-      if ((clipboard_text) && (g_strcmp0((gchar*)element->data, clipboard_text) == 0))
+      if ((clipboard_temp) && (g_strcmp0((gchar*)element->data, clipboard_temp) == 0))
       {
         gchar* bold_text = g_markup_printf_escaped("<b>%s</b>", string->str);
         gtk_label_set_markup((GtkLabel*)item_label, bold_text);
         g_free(bold_text);
       }
-      else if ((primary_text) && (g_strcmp0((gchar*)element->data, primary_text) == 0))
+      else if ((primary_temp) && (g_strcmp0((gchar*)element->data, primary_temp) == 0))
       {
         gchar* italic_text = g_markup_printf_escaped("<i>%s</i>", string->str);
         gtk_label_set_markup((GtkLabel*)item_label, italic_text);
@@ -606,6 +610,7 @@ show_history_menu(gpointer data)
       else
         element_number++;
     }
+    /* Cleanup */
     g_free(primary_temp);
     g_free(clipboard_temp);
     /* Return history to normal if reversed */
